# GB-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RUNNING.md  bus.cpp  bus.hpp  cart.cpp  cart.hpp  cpu.cpp  cpu.hpp  cpu_utils.cpp  emu.cpp  emu.hpp  gb-emulator  gb_utils.hpp  imgui.ini  instructions.cpp  instructions.hpp  main.cpp  memory.cpp
fonts/ttf/: JetBrainsMono-Medium.h
include/: apu.hpp  audio_player.hpp  cart.hpp  cpu.hpp  debugger.hpp  emu.hpp  gb_utils.hpp  instructions.hpp  interrupt.hpp  joypad.hpp  mmu.hpp  ppu.hpp  process_instructions.hpp  timer.hpp  ui.hpp
include/mmu/: ppu.hpp
roms/: .gitkeep  Legend of Zelda, The - Link's Awakening (USA, Europe).gb.battery  Legend of Zelda, The - Link's Awakening (USA, Europe).sav  Tetris.gb.i64  cpu_instrs.gb.i64  desktop.ini
src/: apu.cpp  audio_player.cpp  cart.cpp  cart.d  cpu.cpp  debugger.cpp  decode_instructions.cpp  emu.cpp  emu.d  instructions.cpp  interrupt.cpp  joypad.cpp  main.cpp  main.d  mmu.cpp  ppu.cpp  process_instructions.cpp  timer.cpp
src/cpu/: cpu.cpp  cpu.d  decode_instructions.cpp  decode_instructions.d  instructions.cpp  instructions.d  mmu.cpp  mmu.d  process_instructions.cpp  process_instructions.d  registers.cpp  registers.d
src/mmu/: ppu.cpp
tests/: test_invariant_debugger.cpp
